# commit-message-pre-commit

./: .pre-commit-hooks.yaml  .pre-commit-hooks.yml  commit_message_check.py  pyproject.toml
.github/workflows/: ci.yml
commit_message_check_pre_commit/: hook.py
tests/: test_base.py
