package-mode = false 

[tool.poetry]
name = "commit-message-pre-commit"
version = "0.1.0"
description = ""
authors = ["antonio ielo <antonio.ielo@unical.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.0"
mypy = "^1.10.0"
parse = "^1.20.1"
