[tool.poetry]
name = "commit-message-check-pre-commit"
version = "0.2.1"
description = ""
authors = ["antonio ielo <antonio.ielo@unical.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.0"
mypy = "^1.10.0"
parse = "^1.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
commit_message_check = "commit_message_check_pre_commit.hook:run"
